--- a/K-Nearest Neighbors (KNN).ipynb
+++ b/K-Nearest Neighbors (KNN).ipynb
@@ -26,6 +26,7 @@
    "source": [
     "# step no1\n",
     "import numpy as np\n",
+    "import numpy as np\n",
     "from sklearn.model_selection import train_test_split\n",
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.neighbors import KNeighborsClassifier"
