--- a/isomap.ipynb
+++ b/isomap.ipynb
@@ -14,6 +14,16 @@
     "demographics. The challenge is to identify patterns and clusters within\n",
     "this high-dimensional data to better understand customer segments and\n",
     "optimize marketing strategies.'''\n",
+    "#it is written there\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
     "# using Isomap"
    ]
   },
